# facturacion

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  docker-compose.yml  facturacion.sql
backend/: .coveragerc  .env.example  .pre-commit-config.yaml  Dockerfile  LINTING.md  MIGRATIONS.md  TESTING.md  TESTING_RESULTS.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: auth.py  clientes.py  empresas.py  facturas.py  productos.py  usuarios.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  cliente.py  empresa.py  factura.py  producto.py  rol.py  usuario.py
backend/app/schemas/: __init__.py  auth.py  cliente.py  empresa.py  factura.py  producto.py
backend/app/services/: auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_migration.py
backend/scripts/: lint.py  migrate.py  run_tests.py  seed_all.py  seed_companies.py  seed_data.py  seed_invoices.py  seed_master_data.py  seed_simple.py  test_endpoints.py  test_swagger_demo.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_clientes_endpoints.py  test_empresas_endpoints.py  test_error_handling.py  test_facturas_endpoints.py  test_productos_endpoints.py  test_validaciones_colombianas.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_auth.py  test_models.py  test_services.py
