[metadata]
name = facturacion-backend
description = Colombian Electronic Invoicing System Backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/company/facturacion-backend
author = Development Team
author_email = dev@facturacion.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: FastAPI
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include = app*
exclude = 
    tests*
    migrations.versions*

# Flake8 Configuration
[flake8]
max-line-length = 88
extend-ignore = 
    # Black compatibility
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    # Additional ignores
    E231,  # missing whitespace after ','
    E402,  # module level import not at top of file (sometimes needed)
    F401,  # imported but unused (handled by other tools)
    # Colombian specific ignores
    N815,  # mixed case variable in class scope (for Spanish names)
    N816,  # mixed case variable in global scope

exclude =
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv,
    venv,
    migrations/versions,
    docs/source/conf.py,

per-file-ignores =
    # Tests can have longer lines and unused imports
    tests/*:E501,F401,F811
    # Migration files can have long lines
    migrations/*:E501
    # Init files can have unused imports
    __init__.py:F401
    # Settings files can have long lines
    */config.py:E501
    # Schemas can have long lines for field definitions
    */schemas/*:E501

max-complexity = 10
docstring-convention = google
inline-quotes = double

# Naming conventions for Colombian context
[flake8:local-plugins]
extension =
    N801 = off  # Allow mixed case class names for Spanish terms
    N802 = off  # Allow mixed case function names
    N803 = off  # Allow mixed case argument names
    N806 = off  # Allow mixed case variable names in functions

# Error codes reference:
# E: PEP 8 errors
# W: PEP 8 warnings  
# F: PyFlakes errors
# C: McCabe complexity
# N: pep8-naming errors

select = 
    E,   # PEP 8 errors
    W,   # PEP 8 warnings
    F,   # PyFlakes
    C,   # McCabe complexity
    # N,   # Naming (disabled for Spanish names)
    B,   # flake8-bugbear
    # S,   # flake8-bandit (security)
    I,   # isort
    
# Flake8 plugins configuration
application-import-names = app
import-order-style = google

# flake8-docstrings
docstring-convention = google
ignore-decorators = property

# flake8-quotes
inline-quotes = double
multiline-quotes = double
docstring-quotes = double
avoid-escape = True